# nyfitsa

./: .gitignore  LICENSE  README.md  pyproject.toml  stats.json  urls.txt
nyfitsa/: nyfitsa.py  pyproject.toml  test_tyro.py
nyfitsa/src/nyfitsa/: __init__.py  __main__.py  cli.py  nyfitsa.py
nyfitsa/tests/: test_nyfitsa.py
src/nyfitsa/: __init__.py  benchmark.py  cli.py  get_server.py  nyfitsa.py
tests/: test_nyfitsa.py  test_parallelize.py
