[project]
name = "nyfitsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "tyro>=0.8.11",
    "tqdm>=4.66.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "uv>=0.4.22",
    "black>=24.10.0",
]

