[project]
name = "nyfitsa"
version = "0.1.0"
description = "`Nyfitsa` is a Python-based command-line tool designed to fetch header data from a list of URLs and calculate statistics based on specific HTTP headers such as server information, XSS protection, X-Frame options, content type options, and referrer policy. The tool supports fetching URLs both from a list provided via the command line and from a text file.
"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "tyro>=0.8.11",
    "tqdm>=4.66.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "uv>=0.4.22",
    "black>=24.10.0",
]

